app/deployment_appuio-acm-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: appuio-acm-example
  name: appuio-acm-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appuio-acm-example
  template:
    metadata:
      labels:
        app: appuio-acm-example
    spec:
      containers:
      - name: example-php-docker-helloworld
        image: appuio/example-php-docker-helloworld
        imagePullPolicy: Always
